--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "bcryptjs": "^2.4.3",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.12",
+    "moment-jalaali": "^0.10.4",
+    "mongoose": "^7.4.1",
+    "next": "13.4.12",
+    "next-auth": "^4.22.1",
+    "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-multi-date-picker": "^4.5.2"
   },
   "devDependencies": {
     "eslint": "^9",
